[package]

name = "rust-install"
version = "0.0.4"
authors = [ "Diggory Blake <diggsey@googlemail.com>" ]
description = "common code shared by multirust and rustup"

documentation = "http://diggsey.github.io/multirust-rs/rust_install/index.html"
homepage = "https://github.com/Diggsey/multirust-rs"
repository = "https://github.com/Diggsey/multirust-rs"

license = "MIT"

[dependencies]
regex = "0.1.41"
rand = "0.3.11"
hyper = "0.6.14"
openssl = "0.6.5"
itertools = "0.4.1"

[target.x86_64-pc-windows-gnu.dependencies]
winapi = "0.2.4"
winreg = "0.3.1"

[target.x86_64-pc-windows-msvc.dependencies]
winapi = "0.2.4"
winreg = "0.3.1"

[target.i686-pc-windows-gnu.dependencies]
winapi = "0.2.4"
winreg = "0.3.1"

[target.i686-pc-windows-msvc.dependencies]
winapi = "0.2.4"
winreg = "0.3.1"

[lib]
name = "rust_install"
