[package]

name = "rustup-utils"
version = "1.10.0"
authors = [ "Diggory Blake <diggsey@googlemail.com>" ]
description = "Utility functions for rustup"

documentation = "http://rust-lang-nursery.github.io/rustup.rs/rustup_utils/index.html"
homepage = "https://github.com/rust-lang-nursery/rustup.rs"
repository = "https://github.com/rust-lang-nursery/rustup.rs"

license = "MIT OR Apache-2.0"

[dependencies]
download = { path = "../download", features = ["curl-backend", "reqwest-backend"] }
error-chain = "0.11"
libc = "0.2.0"
rand = "0.3.11"
remove_dir_all = "0.2.0"
scopeguard = "0.3.0"
semver = "0.7.0"
sha2 = "0.6.0"
toml = "0.4"
url = "1.1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["combaseapi", "errhandlingapi", "fileapi", "handleapi", 
    "ioapiset", "minwindef", "processthreadsapi", "shlobj", "shtypes", "userenv", "winbase", "winerror", "winnt", "winioctl"] }
winreg = "0.4.0"
