[package]
name = "rustup-win-installer"
version = "1.10.0"
authors = ["Patrick Reisert"]
build = "build.rs"

[lib]
name = "rustup_msi"
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3", features = ["ntdef", "minwindef"] }
rustup = { path = "../rustup", version = "1.1.0" }

[build-dependencies]
gcc = "0.3"
