[package]

name = "rustup"
version = "1.10.0"
authors = [ "Diggory Blake <diggsey@googlemail.com>" ]
description = "Manage multiple rust installations with ease"

documentation = "http://rust-lang-nursery.github.io/rustup.rs/rustup/index.html"
homepage = "https://github.com/rust-lang-nursery/rustup.rs"
repository = "https://github.com/rust-lang-nursery/rustup.rs"

readme = "README.md"

keywords = ["rustup", "multirust", "install", "proxy"]

license = "MIT OR Apache-2.0"

build = "../build.rs"
#test = false # no unit tests

[dependencies]
rustup-dist = { path = "../rustup-dist" }
rustup-utils = { path = "../rustup-utils" }
error-chain = "0.11"
itertools = "0.6"
libc = "0.2.0"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.6.0"
tempfile = "2.1.4"
time = "0.1.34"
toml = "0.4"
url = "1.1.0"
