[package]

name = "download"
version = "0.4.0"
edition = "2018"
authors = [ "Brian Anderson <banderson@mozilla.com>" ]

license = "MIT/Apache-2.0"

[features]

default = ["curl-backend"]

curl-backend = ["curl"]
reqwest-backend = ["reqwest", "env_proxy", "lazy_static"]

[dependencies]
error-chain = "0.12"
url = "1.7"
curl = { version = "0.4.11", optional = true }
env_proxy = { version = "0.2.0", optional = true }
lazy_static = { version = "1.0", optional = true }
reqwest = { version = "0.9", optional = true }

[dev-dependencies]
futures = "0.1"
hyper = "0.12"
tempdir = "0.3.4"
tokio = "0.1.11"
tokio-tls = "0.2.1"
native-tls = "0.2.1"
