[package]

name = "download"
version = "0.4.0"
edition = "2018"
authors = [ "Brian Anderson <banderson@mozilla.com>" ]

license = "MIT/Apache-2.0"

[dependencies]
error-chain = "0.12"
url = "1.7"
env_proxy = "0.2.0"
lazy_static = "1.0"
reqwest = "0.9"

[dev-dependencies]
futures = "0.1"
hyper = "0.12"
tempdir = "0.3.4"
