[package]

name = "error-chain"
version = "0.1.8"
authors = [ "Brian Anderson <banderson@mozilla.com>",
            "Paul Colomiets <paul@colomiets.name>",
            "Colin Kiegel <kiegel@gmx.de>"]
description = "Yet another error boilerplate library"

documentation = "http://rust-lang-nursery.github.io/rustup.rs/error-chain/index.html"
homepage = "https://github.com/rust-lang-nursery/rustup.rs"
repository = "https://github.com/rust-lang-nursery/rustup.rs"

license = "MIT OR Apache-2.0"

[dependencies]
backtrace = "0.2.1"
