[package]
name = "home"
version = "0.1.0"
authors = [ "Brian Anderson <andersrb@gmail.com>" ]
description = "Shared definitions of home directories"
documentation = "https://docs.rs/home"
repository = "https://github.com/brson/home"
license = "MIT/Apache-2.0"

[dependencies]
rand = "0.3.11"
scopeguard = "0.1.2"
error-chain = "0.7.1"
libc = "0.2.0"
rustc-serialize = "0.3.19"
sha2 = "0.6.0"
url = "1.1"
toml = "0.1.27"
semver = "0.4.0"
download = { path = "../download" }
lazy_static = "0.1.15"

[target."cfg(windows)".dependencies]
winapi = "0.2.8"
winreg = "0.3.2"
shell32-sys = "0.1.1"
ole32-sys = "0.2.0"
kernel32-sys = "0.2.1"
advapi32-sys = "0.2.0"
userenv-sys = "0.2.0"

