[package]

name = "multirust-dist"
version = "0.0.5"
authors = [ "Diggory Blake <diggsey@googlemail.com>" ]
description = "Installation from a Rust distribution server"

documentation = "http://diggsey.github.io/multirust-rs/rust_install/index.html"
homepage = "https://github.com/Diggsey/multirust-rs"
repository = "https://github.com/Diggsey/multirust-rs"

license = "MIT OR Apache-2.0"

[dependencies]
regex = "0.1.41"
hyper = "0.7.0"
openssl = "0.7.2"
itertools = "0.4.1"
ole32-sys = "0.2.0"
tar = "0.4.0"
flate2 = "0.2.9"
tempdir = "0.3.4"
walkdir = "0.1.5"
toml = "0.1.27"
multirust-mock = { path = "../multirust-mock" }
multirust-utils = { path = "../multirust-utils" }

[lib]
name = "multirust_dist"
