[package]

name = "multirust-utils"
version = "0.0.5"
authors = [ "Diggory Blake <diggsey@googlemail.com>" ]
description = "multirust in rust - manage multiple rust installations with ease"

documentation = "http://diggsey.github.io/multirust-rs/multirust/index.html"
homepage = "https://github.com/rust-lang-nursery/multirust-rs"
repository = "https://github.com/rust-lang-nursery/multirust-rs"

license = "MIT OR Apache-2.0"

[dependencies]
openssl = "0.7.2"
hyper = "0.7.0"
rand = "0.3.11"
scopeguard = "0.1.2"

[target.x86_64-pc-windows-gnu.dependencies]
winapi = "0.2.4"
winreg = "0.3.2"
shell32-sys = "0.1.1"
ole32-sys = "0.2.0"
kernel32-sys = "0.2.1"
advapi32-sys = "0.2.0"
userenv-sys = "0.2.0"

[target.x86_64-pc-windows-msvc.dependencies]
winapi = "0.2.4"
winreg = "0.3.2"
shell32-sys = "0.1.1"
ole32-sys = "0.2.0"
kernel32-sys = "0.2.1"
advapi32-sys = "0.2.0"
userenv-sys = "0.2.0"

[target.i686-pc-windows-gnu.dependencies]
winapi = "0.2.4"
winreg = "0.3.2"
shell32-sys = "0.1.1"
ole32-sys = "0.2.0"
kernel32-sys = "0.2.1"
advapi32-sys = "0.2.0"
userenv-sys = "0.2.0"

[target.i686-pc-windows-msvc.dependencies]
winapi = "0.2.4"
winreg = "0.3.2"
shell32-sys = "0.1.1"
ole32-sys = "0.2.0"
kernel32-sys = "0.2.1"
advapi32-sys = "0.2.0"
userenv-sys = "0.2.0"
