[package]

name = "rustup-dist"
version = "0.1.11-pre"
authors = [ "Diggory Blake <diggsey@googlemail.com>" ]
description = "Installation from a Rust distribution server"
build = "build.rs"

documentation = "http://rust-lang-nursery.github.io/rustup.rs/rustup_dist/index.html"
homepage = "https://github.com/rust-lang-nursery/rustup.rs"
repository = "https://github.com/rust-lang-nursery/rustup.rs"

license = "MIT OR Apache-2.0"

[dependencies]
regex = "0.1.41"
itertools = "0.4.1"
ole32-sys = "0.2.0"
url = "1.1.0"
tar = "0.4.0"
flate2 = "0.2.9"
tempdir = "0.3.4"
walkdir = "0.1.5"
toml = "0.1.27"
sha2 = "0.1.2"
rustup-utils = { path = "../rustup-utils", version = "0.1.11-pre" }
error-chain = { path = "../error-chain", version = "0.1.11-pre" }
rustup-mock = { path = "../rustup-mock", version = "0.1.11-pre" }

[lib]
name = "rustup_dist"
