[package]

name = "rustup-dist"
version = "1.15.0"
authors = [ "Diggory Blake <diggsey@googlemail.com>" ]
description = "Installation from a Rust distribution server"
build = "build.rs"

documentation = "http://rust-lang.github.io/rustup.rs/rustup_dist/index.html"
homepage = "https://github.com/rust-lang/rustup.rs"
repository = "https://github.com/rust-lang/rustup.rs"

license = "MIT OR Apache-2.0"

[dependencies]
regex = "1.0.1"
itertools = "0.7"
ole32-sys = "0.2.0"
url = "1.1.0"
tar = "0.4.0"
flate2 = "1.0.1"
xz2 = "0.1.3"
walkdir = "2.0"
toml = "0.4"
sha2 = "0.7.0"
remove_dir_all = "0.5.1"
rustup-utils = { path = "../rustup-utils" }
error-chain = "0.12"

[dev-dependencies]
rustup-mock = { path = "../rustup-mock" }
tempdir = "0.3.4"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["handleapi", "sysinfoapi", "tlhelp32", "winnt"] }
winreg = "0.5"

[target."cfg(not(windows))".dependencies]
libc = "0.2.0"

[lib]
name = "rustup_dist"
