[package]

name = "rustup-error"
version = "0.1.7"
authors = [ "Brian Anderson <banderson@mozilla.com",
            "Paul Colomiets <paul@colomiets.name>",
            "Colin Kiegel <kiegel@gmx.de>"]
description = "Yet another error boilerplate library"

documentation = "http://diggsey.github.io/multirust-rs/multirust/index.html"
homepage = "https://github.com/rust-lang-nursery/multirust-rs"
repository = "https://github.com/rust-lang-nursery/multirust-rs"

license = "MIT OR Apache-2.0"
