[package]

name = "rustup-mock"
version = "1.6.0"
authors = [ "Diggory Blake <diggsey@googlemail.com>" ]
description = "Test mocks for rustup"

documentation = "http://rust-lang-nursery.github.io/rustup.rs/rustup_mock/index.html"
homepage = "https://github.com/rust-lang-nursery/rustup.rs"
repository = "https://github.com/rust-lang-nursery/rustup.rs"

[dependencies]
url = "1.1.0"
scopeguard = "0.3.0"
lazy_static = "0.2.0"
walkdir = "1.0.0"
flate2 = "0.2.9"
xz2 = "0.1.3"
tempdir = "0.3.4"
itertools = "0.6"
tar = "0.4.0"
toml = "0.1.27"
rustup-utils = { path = "../rustup-utils" }
sha2 = "0.6.0"
wait-timeout = "0.1.3"

[target."cfg(windows)".dependencies]
winapi = "0.2.8"
winreg = "0.4.0"

