[package]

name = "rustup-mock"
version = "1.16.0"
edition = "2018"
authors = [ "Diggory Blake <diggsey@googlemail.com>" ]
description = "Test mocks for rustup"

documentation = "http://rust-lang.github.io/rustup.rs/rustup_mock/index.html"
homepage = "https://github.com/rust-lang/rustup.rs"
repository = "https://github.com/rust-lang/rustup.rs"

[dependencies]
url = "1.1.0"
lazy_static = "1.0.0"
walkdir = "2.0.0"
flate2 = "1.0.1"
xz2 = "0.1.3"
tempdir = "0.3.4"
tar = "0.4.0"
toml = "0.4"
sha2 = "0.7.0"

[target."cfg(windows)".dependencies]
winapi = "0.3"
winreg = "0.5.0"
