[package]

name = "rustup-utils"
version = "1.6.0"
authors = [ "Diggory Blake <diggsey@googlemail.com>" ]
description = "Utility functions for rustup"

documentation = "http://rust-lang-nursery.github.io/rustup.rs/rustup_utils/index.html"
homepage = "https://github.com/rust-lang-nursery/rustup.rs"
repository = "https://github.com/rust-lang-nursery/rustup.rs"

license = "MIT OR Apache-2.0"

[dependencies]
download = { path = "../download" }
error-chain = "0.11"
libc = "0.2.0"
rand = "0.3.11"
remove_dir_all = "0.2.0"
scopeguard = "0.3.0"
semver = "0.7.0"
sha2 = "0.6.0"
toml = "0.4"
url = "1.1"

[target."cfg(windows)".dependencies]
advapi32-sys = "0.2.0"
kernel32-sys = "0.2.1"
ole32-sys = "0.2.0"
shell32-sys = "0.1.1"
userenv-sys = "0.2.0"
winapi = "0.2.8"
winreg = "0.4.0"
